dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(tndb.h)
AM_INIT_AUTOMAKE(tndb, 0.1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_CONFIG_HEADER(config.h)
AM_PROG_LIBTOOL

AM_CFLAGS="-Wall -W"
AC_SUBST(AM_CFLAGS)

dnl Checks for header files.
AC_HEADER_STDC
AC_C_INLINE
AC_CHECK_HEADERS(limits.h obstack.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_CHECK_FUNCS(mkstemp)

AC_CHECK_FUNCS(EVP_DigestInit,,
	[AC_CHECK_LIB(crypto, EVP_DigestInit,,
	 [AC_MSG_ERROR(["libcryto is needed by $PACKAGE"])]
	)],)

AC_CHECK_LIB(z, gzopen)

dnl use local ../trurlib copy if it exists
CONF_IN_LDFLAGS=
if test -f "../trurlib/include/trurl/trurl.h"; then
	AC_MSG_CHECKING(for local trurlib copy in ../trurlib)
	AC_MSG_RESULT([yes])
	CPPFLAGS="$CPPFLAGS -I\$(top_srcdir)/../trurlib/include/"
	LDFLAGS="$LDFLAGS -L\$(top_srcdir)/../trurlib"
	LIBS="$LIBS -ltrurl"
else 
	AC_CHECK_HEADER(trurl/trurl.h,,AC_MSG_ERROR("trurl.h is missing"))
	AC_CHECK_LIB(trurl, n_cfree)
fi

AC_OUTPUT([ Makefile ])
